[project]
name = "pokecon-extensions"
version = "0.1.0"
description = "Poke-Controller MODIFIED向け機能拡張ライブラリ"
readme = "README.md"
dependencies = [
  "opencv-python",
  "typing_extensions",
  "pyserial",
  "pydantic"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
